--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <img class="img-fluid imageSize" src="https://cdn.pixabay.com/photo/2020/07/14/20/25/prague-5405649_960_720.jpg ">
     </div>
     <div class="col-12 col-sm-6 col-md-4">
-      <iframe width="auto" height="280" src="https://www.youtube.com/embed/dyZDkPTtCqg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="100%" height="280" src="https://www.youtube.com/embed/dyZDkPTtCqg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
          
     </div>
 
