--- a/index2.html
+++ b/index2.html
@@ -183,7 +183,7 @@
                         <h5 class="left">My first photo</h5>
                         <span class="spanRight">12/14</span>
                     </div>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/dyZDkPTtCqg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="280" src="https://www.youtube.com/embed/dyZDkPTtCqg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <p class="card-text"><small class="text-muted likes">23 likes</small></p>
                     <div class="card-body">
                         <p class="card-text">This is a wider card with supporting text below as a natural
